[package]
name = "canal-mania"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []

[dependencies]
bevy = "0.11"
console_error_panic_hook = "0.1"
bevy_asset_loader = { version = "0.17", features = ["standard_dynamic_assets"] }
bevy_common_assets = { version = "0.7", features = ["json", "yaml"] }
serde = "1"
serde_json = "*"
smooth-bevy-cameras = "*"
bevy_egui = "*"
bevy-inspector-egui = "0.19"
bevy-sequential-actions = "0.8.0"
bevy_mod_picking = "0.15.0"
bevy_prototype_lyon = "0.9"
noisy_bevy = "*"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
